# OpenCV_VC

./: .bash_history  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  main.cpp  reporte_figuras.txt  run_full_stack.sh  run_full_stack_terminals.sh  tempCodeRunnerFile.py  token.json
cv_testing/: .gitignore  Detector_orb_negro.py  Train_YOLO_V5.py  adcfd.py  arduino_led.py  camera_load.py  captura_imagenes_V3.py  color_detection.py  corner_detection.py  credentials.json  data.yaml  detector_imagen_entrenada_V2.py  drive_test_upload.py  face_detection.py  login.py  red_test.py  shape_detection.py  tempCodeRunnerFile.py  test.py  test_2.py  upload_to_drive.py
cv_testing/drive_cpp_test/: CMakeLists.txt  main.cpp
cv_testing/metrics_service/: CMakeLists.txt  main.cpp
ros_ws/: .gitignore  frames_2025-11-30_18.59.47.gv
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/lidar_slam_pkg/lib/lidar_slam_pkg/: closest_object  slam_node
ros_ws/install/lidar_slam_pkg/share/lidar_slam_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/slam_pkg/share/slam_pkg/: package.ps1  package.sh  package.xml
ros_ws/install/sllidar_ros2/lib/sllidar_ros2/: sllidar_client  sllidar_node
ros_ws/install/sllidar_ros2/share/ament_index/resource_index/package_run_dependencies/: sllidar_ros2
ros_ws/install/sllidar_ros2/share/ament_index/resource_index/parent_prefix_path/: sllidar_ros2
ros_ws/install/sllidar_ros2/share/sllidar_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros_ws/install/sllidar_ros2/share/sllidar_ros2/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  sllidar_ros2Config-version.cmake  sllidar_ros2Config.cmake
ros_ws/install/sllidar_ros2/share/sllidar_ros2/environment/: ament_prefix_path.dsv  path.dsv
ros_ws/install/sllidar_ros2/share/sllidar_ros2/launch/: sllidar_a1_launch.py  sllidar_a2m12_launch .py  sllidar_a2m7_launch.py  sllidar_a2m8_launch.py  sllidar_a3_launch.py  sllidar_c1_launch.py  sllidar_s1_launch.py  sllidar_s1_tcp_launch.py  sllidar_s2_launch.py  sllidar_s2e_launch.py  sllidar_s3_launch.py  sllidar_t1_launch.py  view_sllidar_a1_launch.py  view_sllidar_a2m12_launch.py  view_sllidar_a2m7_launch.py  view_sllidar_a2m8_launch.py  view_sllidar_a3_launch.py  view_sllidar_c1_launch.py  view_sllidar_s1_launch.py  view_sllidar_s1_tcp_launch.py  view_sllidar_s2_launch.py  view_sllidar_s2e_launch.py  view_sllidar_s3_launch.py  view_sllidar_t1_launch.py
ros_ws/install/sllidar_ros2/share/sllidar_ros2/rviz/: sllidar_ros2.rviz
ros_ws/launch_files/: launch_lidar.py
ros_ws/log/: latest_build
ros_ws/src/control_pkg/: package.xml  setup.cfg  setup.py
ros_ws/src/control_pkg/config/: nav2_params.yaml  slam_params.yaml
ros_ws/src/control_pkg/control_pkg/: closest_object.py  cmd_mux.py  color_detection_node.py  cv_object_tracking_color.py  lidar_avoid.py  map_to_png.py  metrics_bridge.py  serial_bridge.py  session.csv
ros_ws/src/control_pkg/launch/: full_launch.py  lidar_launch.py  nav2_slam.launch.py  slam_mapping.launch.py
ros_ws/src/lidar_slam_pkg/: package.xml  setup.py
ros_ws/src/lidar_slam_pkg/lidar_slam_pkg/: slam_node.py
ros_ws/src/yolo_pkg/: CMakeLists.txt  package.xml
ros_ws/src/yolo_pkg/models/: best.param
ros_ws/src/yolo_pkg/runs/detect/train/: args.yaml
ros_ws/src/yolo_pkg/src/: main.cpp
runs/detect/train/: results.csv
