<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_pkg</name>
  <version>0.0.0</version>
  <description>YOLO NCNN demo executable and models</description>
  <maintainer email="mario.hurtado@udem.edu">mario</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>opencv4</build_depend>
  <build_depend>ncnn</build_depend>
  <build_depend>openmp</build_depend>

  <build_export_depend>opencv4</build_export_depend>
  <build_export_depend>ncnn</build_export_depend>
  <build_export_depend>openmp</build_export_depend>

  <exec_depend>opencv4</exec_depend>
  <exec_depend>ncnn</exec_depend>
  <exec_depend>openmp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
